# dynamous_ai_tutor

./: .env.example  .gitignore  .gitmodules  GEMINI.md  GOLDEN.rules  LICENSE  PLANNING.md  README.md  TASK.md  agent.py  cli_ui.py  idea.md  memory.py  prompts.py  pyproject.toml  requirements.txt  run_tests.sh  tools.py
_Learning/00_increment/: README.md
_Learning/01_increment/1_backlog/: interation_plan0101.md
_Learning/01_increment/2_wip/: interation_plan0101.md  interation_plan0102.md
_Learning/01_increment/3_closed/: interation_plan0102.md  lessons_from_iteration0101.md  update_gemini_md
examples/: PLANNING.md  PROMPTS.md
sql/: conversations.sql  messages.sql  rpc_get_user_conversations.sql  user_profiles.sql
src/: agent.py  cli.py  prompts.py
tests/: test_agent.py  test_memory.py  test_tools.py
working/: issue_template.md
working/1issue_open/: mem0_config_attribute_error.md
working/3issue_closed/: no_module_named_mem0ai.md
working/issue_open/: no_module_named_mem0ai.md
